--- a/ansible/host_vars/cantilever.addeo.net.yml
+++ b/ansible/host_vars/cantilever.addeo.net.yml
@@ -68,6 +68,7 @@ zfs_pools:
     state: present
 
 # Proxmox Configuration.
+# @TODO encryption?
 pve_storages:
   - name: local-vmpool
     type: zfspool
