--- a/ansible/proxmox-backup-server.yml
+++ b/ansible/proxmox-backup-server.yml
@@ -60,3 +60,69 @@
         name: root
         password: "{{ pbs_root_password | password_hash('sha512', 65535 | random(seed=inventory_hostname) | string) }}"
       no_log: true
+
+    - name: Get existing datastores
+      shell: proxmox-backup-manager datastore list --output-format json
+      changed_when: false
+      check_mode: false
+      register: existing_datastores
+      tags: pbs_datastores
+
+    - set_fact:
+        existing_datastore_names: "{{ existing_datastores.stdout_lines[0] | from_json | json_query('[*].name') }}"
+      tags: pbs_datastores
+
+    - set_fact:
+        existing_datastores: "{{ existing_datastores.stdout_lines[0] | from_json }}"
+      tags: pbs_datastores
+
+    - name: Create missing datastores
+      shell: >-
+        proxmox-backup-manager datastore create {{ item.name }} {{ item.backing_path }}
+        {% if item.comment is defined -%}
+          --comment "{{ item.comment }}"
+        {%- endif %}
+        {% if item.gc_schedule is defined -%}
+          --gc-schedule "{{ item.gc_schedule }}"
+        {%- endif %}
+        {% if item.prune_schedule is defined -%}
+          --prune-schedule "{{ item.prune_schedule }}"
+        {%- endif %}
+        {% if item.prune_options.keep_last is defined -%}
+          --keep-last {{ item.prune_options.keep_last }}
+        {%- endif %}
+        {% if item.prune_options.keep_hourly is defined -%}
+          --keep-hourly {{ item.prune_options.keep_hourly }}
+        {%- endif %}
+        {% if item.prune_options.keep_daily is defined -%}
+          --keep-daily {{ item.prune_options.keep_daily }}
+        {%- endif %}
+        {% if item.prune_options.keep_weekly is defined -%}
+          --keep-weekly {{ item.prune_options.keep_weekly }}
+        {%- endif %}
+        {% if item.prune_options.keep_monthly is defined -%}
+          --keep-monthly {{ item.prune_options.keep_monthly }}
+        {%- endif %}
+        {% if item.prune_options.keep_yearly is defined -%}
+          --keep-yearly {{ item.prune_options.keep_yearly }}
+        {%- endif %}
+      loop: "{{ pbs_datastores }}"
+      when: item.state == "present" and item.name not in existing_datastore_names
+      tags: pbs_datastores
+
+    - name: Updating existing datastores
+      shell: >-
+        proxmox-backup-manager datastore update {{ item.name }}
+        {% if item.comment is defined -%}
+          --comment "{{ item.comment }}"
+        {%- endif %}
+        {% if item.gc_schedule is defined -%}
+          --gc-schedule "{{ item.gc_schedule }}"
+        {%- endif %}
+      loop: "{{ pbs_datastores }}"
+      vars:
+        existing:
+      when: (item.state == "present" and item.name in existing_datastore_names)
+        and (item.gc_schedule != (existing_datastores | selectattr('name', 'eq', item.name))[0]["gc-schedule"]
+        or item.comment != (existing_datastores | selectattr('name', 'eq', item.name))[0].comment)
+      tags: pbs_datastores
